# xev-whisprflow

./: .env.example  .gitignore  CLAUDE.md  README.md  install.sh  pyproject.toml
systemd/: voiceflow.service  xev-whisprflow.service
voiceflow/: __init__.py  audio.py  config.py  dashboard.py  injector.py  llm.py  main.py  overlay.py  tray.py
voiceflow/static/: index.html
xev_whisprflow/: config.py  dashboard.py  hotkey.py  injector.py  main.py  overlay.py  stt.py
xev_whisprflow/static/: index.html
